--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,7 +7,8 @@
   /* background-color: rgb(10, 6, 32);*/
     background-size: cover;
     color: white;
-    height: 760px;
+    /*height: 760px;*/
+    height: 100vh;
     font-family: 'Agency FB', arial;
     font-size: 2rem;
 }
