--- a/src/components/About.css
+++ b/src/components/About.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     background-image: url("../img/BACKGROUND3.jpg");
+    background-position: 5%;
   /* background-color: rgb(10, 6, 32);*/
     background-size: cover;
     color: white;
@@ -13,21 +14,6 @@
     font-size: 2rem;
 }
 
-#card_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.card {
-    width: 300px;
-    height: 500px;
-    background-color: rgba(255, 255, 255, 0.363);
-    backdrop-filter: blur(3.4px);
--webkit-backdrop-filter: blur(3.4px);
-
-}
 
 
 #about_title {
@@ -38,22 +24,36 @@
 }
 
 #text_container {
+
     width: 40rem;
- position: relative;
  /*top: -9rem;*/
 
 }
 
 
+
 #ul {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
     margin: 1rem;
     font-size: 1.5rem;
+    margin: 3rem;
 }
 
 
 #ul li{
    margin-right: 2.5rem;
+}
+
+@media only screen and (max-width: 400px) {
+    .about-container {
+        height: 80rem;
+    }
+    #text_container {
+        margin-top: 15rem;
+        width: 20rem;
+        font-size: 1.6rem;
+    }
 }
