--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,9 +1,14 @@
 .nav-container {
+  position: absolute;
+  top: 0px;
+  right: 0px;
     display: flex;
     background-color: transparent;
 
     justify-content: flex-end;
     padding: 1rem;
+    flex-direction: row;
+    width: 100vw;
 }
 
 .nav {
@@ -31,6 +36,20 @@
 
 
 }
+
+.icon_menu {
+  color: white;
+  
+}
+
+#menu_button {
+  border: 0px;
+  background-color: transparent;
+  font-size: 2.5rem;
+  
+}
+
+
 
 /*---------------------------------------*/
 .nav-button {
@@ -95,3 +114,18 @@
 }
 
   /*----------------------------------------------------------*/
+
+
+  @media only screen and (max-width: 400px) {
+    .nav-button  {}
+
+}
+
+
+  @media only screen and (min-width: 700px) {
+
+
+    #menu_button {
+      display: none;
+    }
+  }
