--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,15 +1,15 @@
 .about-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+
     align-items: center;
     background-image: url("../img/BACKGROUND3.jpg");
-    background-position: 5%;
+    background-position: 10%;
   /* background-color: rgb(10, 6, 32);*/
     background-size: cover;
     color: white;
     /*height: 760px;*/
-    height: 100vh;
+    height: 110vh;
     font-family: 'Agency FB', arial;
     font-size: 2rem;
 }
@@ -21,10 +21,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
 }
 
 #text_container {
-
+    margin-top: 8rem;
     width: 40rem;
  /*top: -9rem;*/
 
@@ -53,7 +54,7 @@
     }
     #text_container {
         margin-top: 15rem;
-        width: 20rem;
+        width: 15rem;
         font-size: 1.6rem;
     }
 }
