--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,7 +4,7 @@
     background-size: cover;
     color: white;
     /*height: 800px;*/
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     justify-content: center;
 
