--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -2,11 +2,19 @@
     display: flex;
     background-image: url("../img/BACKGROUND.jpg");
     background-size: cover;
+    /*background-attachment: fixed;*/
     color: white;
     /*height: 800px;*/
-    height: 100vh;
+    height: 130vh;
     flex-direction: column;
+
+
+}
+
+.work_container h3 {
+    display: flex;
     justify-content: center;
+    font-family: 'Agency FB', arial;
 
 }
 
@@ -15,23 +23,60 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    margin-top: 3rem;
 }
 
 .card {
-    margin: 4rem;
-    width: 23rem;
-    height: 30rem;
-    background-color: rgba(255, 253, 253, 0.521);
-    backdrop-filter: blur(3.4px);
--webkit-backdrop-filter: blur(3.4px);
+    margin: 2rem;
+    width: 21rem;
+    height: 35rem;
+    background: rgba(255, 255, 255, 0.062);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    /*border: 1px solid rgba(255, 255, 255, 0.3);*/
 
 }
 
+.card_content {
+    color: white;
+    font-family: 'Agency FB', arial;
+    margin: 1rem;
+    font-size: 1.3rem;
+}
+.card_content h3 {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
 
+.tecnologias {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    color: #ff01be;
+}
+
+.button_card {
+    border: 0px;
+    background-color: transparent;
+    filter: invert(1);
+    cursor: pointer;
+    margin-top: 2rem;
+    margin-left: 2rem;
+}
+.button_card img{
+    width: 1rem;
+}
 #work_title {
-
+    margin-top:2rem;
     font-size: 2rem;
 }
+
+.imagen_port {
+    width: 21rem;
+}
+
 
 @media only screen and (max-width: 400px) {
     .work_container {
@@ -46,11 +91,12 @@
 
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1200px) {
 
-    #card_container {
-        display: flex;
-        flex-direction: column;
+    .work_container {
+     
+        height: 120rem;
+      
     }
   
 }
