--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -101,9 +101,12 @@
 
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
+    .home-container {
+        min-height: 100vh;
+    }
     #container-content {
-        margin-top: 30rem;
+        margin-top: 15rem;
         display: flex;
      flex-direction: column;
      align-items: flex-start;
@@ -141,4 +144,6 @@ justify-content: center;
      
     
     }
+
+ 
 }
