--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'agency-fb';
+    src: url('.././fonts/agency-fb.ttf');
+  }
+
+
+
 .about-container {
     display: flex;
     flex-direction: column;
@@ -10,7 +17,7 @@
     color: white;
     /*height: 760px;*/
     height: 110vh;
-    font-family: 'Agency FB', arial;
+    font-family: 'agency-fb', arial;
     font-size: 2rem;
 }
 
