--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'agency-fb';
+    src: url('.././fonts/agency-fb.ttf');
+  }
+
+
 .home-container {
     display: flex;
     background-image: url("../img/BACKGROUND.jpg");
@@ -22,14 +28,14 @@
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
- font-family: 'Agency FB Bold', arial;
+ font-family: 'agency-fb', arial;
  padding-left: 20px;
  
 }
 
 #texto-landing {
     width: 33rem;
-    font-family: 'Agency FB', arial;
+    font-family: 'agency-fb', arial;
     font-weight: 600;
 }
 
@@ -45,7 +51,7 @@
 
 #introduction {
     font-size: 1.5rem;
-    font-family: 'Agency FB', arial;
+    font-family: 'agency-fb', arial;
 
 }
 
@@ -78,7 +84,7 @@
 
     #texto-landing {
         padding: 2rem;
-        font-family: 'Agency FB', arial;
+        font-family: 'agency-fb', arial;
         font-weight: 600;
     }
 
@@ -96,7 +102,7 @@
         justify-content: center;
         width: 15rem;
         font-size: 1.7rem;
-        font-family: 'Agency FB', arial;
+        font-family: 'agency-fb', arial;
     }
 
 }
@@ -111,13 +117,13 @@
      flex-direction: column;
      align-items: flex-start;
 justify-content: center;
-        font-family: 'Agency FB Bold', arial;
+        font-family: 'agency-fb', arial;
         
     }
     #texto-landing {
         padding-left: 4.4rem;
         width: 10rem;
-        font-family: 'Agency FB', arial;
+        font-family: 'agency-fb', arial;
         font-weight: 600;
     }
   
@@ -135,7 +141,7 @@ justify-content: center;
         justify-content: center;
         width: 15rem;
         font-size: 1.7rem;
-        font-family: 'Agency FB', arial;
+        font-family: 'agency-fb', arial;
     }
 
     #logo {
