--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'agency-fb';
+  src: url('.././fonts/agency-fb.ttf');
+}
+
 .nav-container {
   position: absolute;
   top: 0px;
@@ -23,7 +28,7 @@
     padding: 0.7rem;
     color: white;
     background-color: transparent;
-    font-family: 'Agency FB', arial;
+    font-family: 'agency-fb', arial;
     font-weight: 800;
     font-size: 2rem;
 
@@ -95,10 +100,11 @@
     padding: 0.7rem;
     color: black;
     background-color: white;
-    font-family: 'Agency FB Bold', arial;
+    font-family: 'agency-fb', arial;
     font-size: 2rem;
     margin: 1.2rem;
     text-decoration:none;
+    font-weight: 600;
 }
 
 .lets_connect:hover {
@@ -106,7 +112,7 @@
     cursor: pointer;
     color: black;
     background-color: rgb(248, 250, 114);
-    font-family: 'Agency FB Bold', arial;
+    font-family: 'agency-fb', arial;
     font-size: 2rem;
     margin: 1.2rem;
     text-decoration:none;
