--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,36 +1,31 @@
 @font-face {
     font-family: 'agency-fb';
     src: url('.././fonts/agency-fb.ttf');
-  }
-
+}
 
 .home-container {
     display: flex;
     background-image: url("../img/BACKGROUND.jpg");
     background-size: cover;
     color: white;
-    /*height: 800px;*/
     min-height: 100vh;
     flex-direction: column;
     justify-content: center;
-
 }
 
 #div_navbar {
     position: relative;
-
 }
 
 #container-content {
     position: relative;
-   /* top: 12vh;*/
     display: flex;
- flex-direction: row;
- justify-content: space-around;
- align-items: center;
- font-family: 'agency-fb', arial;
- padding-left: 20px;
- 
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'agency-fb', arial;
+    padding-left: 20px;
+    overflow-y: hidden;
 }
 
 #texto-landing {
@@ -42,24 +37,20 @@
 #my-name {
     font-size:2rem;
     color: #ff01be;
-  
 }
 #ivo-rojas {
     font-size: 8rem;
- 
 }
 
 #introduction {
     font-size: 1.5rem;
     font-family: 'agency-fb', arial;
-
 }
 
 #logo {
     position: relative;
     right: 4rem;
     animation: float 4s ease-in-out infinite;
-
 }
 
 @keyframes float {
@@ -68,88 +59,34 @@
     100%   { transform: translate(0, -0px); }   
 }
 
-
-
-@media only screen and (max-width: 850px) {
-
+@media (max-width: 540px) {
     #container-content {
-   
-        display: flex;
-     flex-direction: row;
-     justify-content: center;
-     align-items: center;
-
-    }
-    
-
-    #texto-landing {
-        padding: 2rem;
-        font-family: 'agency-fb', arial;
-        font-weight: 600;
-    }
-
-    #my-name {
-        font-size:2.9rem;
-        color: #ff01be;
-    }
-    #ivo-rojas {
-        font-size: 6.3rem;
-
-    }
-
-    #introduction {
-        display: flex;
-        justify-content: center;
-        width: 15rem;
-        font-size: 1.7rem;
-        font-family: 'agency-fb', arial;
-    }
-
-}
-
-@media only screen and (max-width: 420px) {
-    .home-container {
-        min-height: 100vh;
-    }
-    #container-content {
-        margin-top: 15rem;
-        display: flex;
-     flex-direction: column;
-     align-items: flex-start;
-justify-content: center;
-        font-family: 'agency-fb', arial;
-        
+    display: flex;
+    flex-direction: column;
     }
     #texto-landing {
-        padding-left: 4.4rem;
-        width: 10rem;
-        font-family: 'agency-fb', arial;
-        font-weight: 600;
-    }
-  
-    #my-name {
-        font-size:2.2rem;
-        color: #ff01be;
+        margin-top: 10vw;
+        width: 70%;
+        margin-bottom: 2rem;
     }
     #ivo-rojas {
-        font-size: 5.2rem;
-
-    }
-
-    #introduction {
-        display: flex;
-        justify-content: center;
-        width: 15rem;
-        font-size: 1.7rem;
-        font-family: 'agency-fb', arial;
-    }
-
-    #logo {
         position: relative;
-        left: 4.4rem;
-     
-    
+        left: -0.3rem;
+        font-size: 7.5rem;
     }
+    #logo {
+        display: none;
+    }
+  }
 
- 
-}
+  @media (max-width: 350px) {
+    .home-container {
+        justify-content: flex-start;
+        padding-top: 2rem;
+    }
+    #ivo-rojas {
+        position: relative;
+        left: -0.3rem;
+        font-size: 7rem;
+    }
+  }
