--- a/src/components/About.css
+++ b/src/components/About.css
@@ -27,7 +27,6 @@
 #text_container {
     margin-top: 1rem;
     width: 40rem;
-
 }
 
 #ul {
@@ -48,7 +47,10 @@
     #text_container {
         margin-top: 8rem;
         width: 70%;
-        font-size: 2rem;
+        font-size: 1.7rem;
         margin-bottom: 5rem;
+    }
+    .about-container {
+        background: none;
     }
   }
